[package]
name = "LHM-OSC_Sender"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.23"
egui = "0.23"
winapi = { version = "0.3", features = ["winuser", "windef"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rosc = "0.6"
crossbeam-channel = "0.5"
chrono = "0.4.41"
